--- a/src/FubuDocs/fubudocs.asset.config
+++ b/src/FubuDocs/fubudocs.asset.config
@@ -1,4 +1,4 @@
-﻿fubuworld.core.css requires toastr.css, toastr-responsive.css, twitterbootstrap
+﻿fubudocs.core.css requires toastr.css, toastr-responsive.css, twitterbootstrap
 toastr-responsive.css requires toastr.css
 prettify.css is sons-of-obsidian.css
 
@@ -7,6 +7,6 @@ request-diagnostics.js requires jquery, toastr.js
 
 topics.js requires jquery, twitter/bootstrap-affix.js
 fubudocs-tools.js requires jquery, toastr.js
-fubuworld.js requires jquery
+fubudocs.js requires jquery
 
 build-status.js requires jquery
