making the home page selection smarter, disconnecting the CLI flags for run from fubu run

--- a/ripple.config
+++ b/ripple.config
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<ripple xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+<ripple xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <Name>FubuDocs</Name>
   <NugetSpecFolder>packaging/nuget</NugetSpecFolder>
   <SourceFolder>src</SourceFolder>
@@ -13,6 +13,7 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
+    <Dependency Name="FubuMVC.CodeSnippets.Docs" Version="1.0.0.347" Mode="Float" />
     <Dependency Name="FubuMVC.Spark" Version="1.0.0.434" Mode="Float" />
     <Dependency Name="FubuMVC.Validation" Version="0.9.10.734" Mode="Float" />
     <Dependency Name="FubuValidation" Version="0.9.10.734" Mode="Float" />
@@ -23,7 +24,7 @@
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
     <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
-    <Dependency Name="Selenium.WebDriver" Version="2.32.0" Mode="Fixed" />
+    <Dependency Name="Selenium.WebDriver" Version="2.35.0" Mode="Fixed" />
     <Dependency Name="Spark" Version="1.7.5.0" Mode="Fixed" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
