--- a/src/FubuDocs/ripple.dependencies.config
+++ b/src/FubuDocs/ripple.dependencies.config
@@ -2,6 +2,7 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.CodeSnippets
+FubuMVC.CodeSnippets.Docs
 FubuMVC.Core
 FubuMVC.Core.Assets
 FubuMVC.Core.UI
