--- a/ripple.config
+++ b/ripple.config
@@ -13,11 +13,17 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
+    <Dependency Name="fubu" Version="0.9.9.303" Mode="Float" />
+    <Dependency Name="FubuCsProjFile" Version="0.9.0.47" Mode="Float" />
+    <Dependency Name="FubuMVC.Ajax" Version="0.1.0.400" Mode="Float" />
     <Dependency Name="FubuMVC.CodeSnippets.Docs" Version="1.0.0.347" Mode="Float" />
     <Dependency Name="FubuMVC.Spark" Version="1.0.0.434" Mode="Float" />
     <Dependency Name="FubuMVC.Validation" Version="0.9.10.734" Mode="Float" />
     <Dependency Name="FubuValidation" Version="0.9.10.734" Mode="Float" />
+    <Dependency Name="Microsoft.Bcl" Version="1.1.3" Mode="Fixed" />
+    <Dependency Name="Microsoft.Bcl.Build" Version="1.0.9-beta" Mode="Fixed" />
     <Dependency Name="Microsoft.Net.Http" Version="2.0.20710.0" Mode="Fixed" />
+    <Dependency Name="Microsoft.Owin" Version="1.1.0-beta2" Mode="Fixed" />
     <Dependency Name="Microsoft.Owin.Host.HttpListener" Version="0.18-alpha" Mode="Fixed" />
     <Dependency Name="Microsoft.Owin.Hosting" Version="0.18-alpha" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
