--- a/src/FubuDocsRunner/FubuDocsRunner.csproj
+++ b/src/FubuDocsRunner/FubuDocsRunner.csproj
@@ -128,25 +128,14 @@
   <ItemGroup>
     <Compile Include="BottleCommand.cs" />
     <Compile Include="DocActionInput.cs" />
-    <Compile Include="Exports\DownloadTokenParser.cs" />
-    <Compile Include="Exports\DownloadAsset.cs" />
-    <Compile Include="Exports\DownloadContext.cs" />
-    <Compile Include="Exports\DownloadManager.cs" />
-    <Compile Include="Exports\DownloadPlan.cs" />
-    <Compile Include="Exports\DownloadReport.cs" />
-    <Compile Include="Exports\DownloadToken.cs" />
-    <Compile Include="Exports\DownloadUrl.cs" />
-    <Compile Include="Exports\ExportApplication.cs" />
+    <Compile Include="Exports\AccessedCache.cs" />
     <Compile Include="Exports\ExportAssetTagWriter.cs" />
+    <Compile Include="Exports\ExportAssetUrls.cs" />
     <Compile Include="Exports\ExportCommand.cs" />
-    <Compile Include="Exports\HtmlElement.cs" />
-    <Compile Include="Exports\IDownloadReportVisitor.cs" />
-    <Compile Include="Exports\IDownloadStep.cs" />
-    <Compile Include="Exports\IDownloadTokenStrategy.cs" />
-    <Compile Include="Exports\IPageSource.cs" />
-    <Compile Include="Exports\ItemDownloaded.cs" />
+    <Compile Include="Exports\ExportContentWriter.cs" />
+    <Compile Include="Exports\ExportUrlRegistry.cs" />
+    <Compile Include="Exports\IAccessedCache.cs" />
     <Compile Include="Exports\SmokeCommand.cs" />
-    <Compile Include="Exports\OverrideRootPath.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Running\ApplicationRootPackageLoader.cs" />
