--- a/src/FubuDocsRunner/FubuDocsRunner.csproj
+++ b/src/FubuDocsRunner/FubuDocsRunner.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Running\DocumentPackageLoader.cs" />
     <Compile Include="Running\FubuDocsApplication.cs" />
     <Compile Include="Running\DefaultHomeEndpoint.cs" />
+    <Compile Include="Running\FubuDocsDirectories.cs" />
     <Compile Include="Running\MainDocumentLinkedPackageLoader.cs" />
     <Compile Include="Running\RunCommand.cs" />
     <Compile Include="Running\RunFubuDocsRegistry.cs" />
