can successfully load the index.spark page from the host application

--- a/src/FubuDocsRunner/FubuDocsRunner.csproj
+++ b/src/FubuDocsRunner/FubuDocsRunner.csproj
@@ -142,10 +142,9 @@
     <Compile Include="Running\ApplicationRootPackageLoader.cs" />
     <Compile Include="Running\DocumentPackageLoader.cs" />
     <Compile Include="Running\FubuDocsApplication.cs" />
-    <Compile Include="Running\DefaultHomeEndpoint.cs" />
+    <Compile Include="Running\HomeEndpoint.cs" />
     <Compile Include="Running\FubuDocsDirectories.cs" />
     <Compile Include="Running\MainDocumentLinkedPackageLoader.cs" />
-    <Compile Include="Running\OverrideChrome.cs" />
     <Compile Include="Running\RunCommand.cs" />
     <Compile Include="Running\RunFubuDocsRegistry.cs" />
     <Compile Include="Running\RunInput.cs" />
