--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -139,6 +139,10 @@
     <Compile Include="PoweredByFubu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\TopNavigation.cs" />
+    <Compile Include="Skinning\HostHomeEndpoint.cs" />
+    <Compile Include="Skinning\OverrideChrome.cs" />
+    <Compile Include="Skinning\SpecialView.cs" />
+    <Compile Include="Skinning\SpecialViewWriter.cs" />
     <Compile Include="Snippets\SnippetRequest.cs" />
     <Compile Include="Snippets\SnippetEndpoints.cs" />
     <Compile Include="Snippets\SnippetsModel.cs" />
