--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -140,7 +140,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\TopNavigation.cs" />
     <Compile Include="Skinning\HostHomeEndpoint.cs" />
-    <Compile Include="Skinning\HostStylePolicy.cs" />
     <Compile Include="Skinning\OverrideChrome.cs" />
     <Compile Include="Skinning\SpecialView.cs" />
     <Compile Include="Skinning\SpecialViewWriter.cs" />
@@ -190,6 +189,7 @@
     <Content Include="content\scripts\toastr.js" />
     <Content Include="content\scripts\topics.js" />
     <Content Include="content\styles\fubudocs.core.css" />
+    <Content Include="content\styles\fubudocs.theme.css" />
     <Content Include="content\styles\sons-of-obsidian.css" />
     <Content Include="content\styles\sunburst.css" />
     <Content Include="content\styles\toastr-responsive.css" />
