--- a/src/FubuDocs/fubudocs.asset.config
+++ b/src/FubuDocs/fubudocs.asset.config
@@ -1,5 +1,5 @@
 ﻿fubudocs.core.css requires toastr.css, toastr-responsive.css, twitterbootstrap
-fubudocs is fubudocs.core.css
+fubudocs.theme.css requires fubudocs.core.css
 
 toastr-responsive.css requires toastr.css
 prettify.css is sons-of-obsidian.css
