--- a/src/FubuDocsRunner/FubuDocsRunner.csproj
+++ b/src/FubuDocsRunner/FubuDocsRunner.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -140,6 +141,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Running\ApplicationRootPackageLoader.cs" />
+    <Compile Include="Running\CurrentDirectoryLoader.cs" />
     <Compile Include="Running\DocumentPackageLoader.cs" />
     <Compile Include="Running\FubuDocsApplication.cs" />
     <Compile Include="Running\HomeEndpoint.cs" />
@@ -176,14 +178,6 @@
     <ProjectReference Include="..\FubuDocs\FubuDocs.csproj">
       <Project>{88235A8D-937D-474D-9675-ECA446E01899}</Project>
       <Name>FubuDocs</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FubuDocs.Docs\FubuDocs.Docs.csproj">
-      <Project>{8D41BF7E-B4B6-4CAF-8C7A-94D09B2F2826}</Project>
-      <Name>FubuWorld.Docs</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FubuWorld\FubuWorld.csproj">
-      <Project>{6F5C4733-AF68-4591-9802-21425E6877C4}</Project>
-      <Name>FubuWorld</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
