--- a/src/FubuDocs.Tests/FubuDocs.Tests.csproj
+++ b/src/FubuDocs.Tests/FubuDocs.Tests.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Topics\ProjectRootImportIntegratedTester.cs" />
     <Compile Include="Topics\ProjectRootPersistenceTester.cs" />
     <Compile Include="Topics\ProjectRootTester.cs" />
+    <Compile Include="Topics\ProjectRoot_version_loading_integration_tester.cs" />
     <Compile Include="Topics\PublishedNugetTester.cs" />
     <Compile Include="Topics\SparkTopicFileTester.cs" />
     <Compile Include="Topics\splash_page_mechanics.cs" />
@@ -152,7 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FubuDocs.Docs\FubuDocs.Docs.csproj">
-      <Project>{8d41bf7e-b4b6-4caf-8c7a-94d09b2f2826}</Project>
+      <Project>{8D41BF7E-B4B6-4CAF-8C7A-94D09B2F2826}</Project>
       <Name>FubuDocs.Docs</Name>
     </ProjectReference>
     <ProjectReference Include="..\FubuDocsRunner\FubuDocsRunner.csproj">
