convenience method to initialize a new gh-pages branch for a given git repository.  Closes GH-17

--- a/src/FubuDocsRunner/FubuDocsRunner.csproj
+++ b/src/FubuDocsRunner/FubuDocsRunner.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Exports\ExportUrlRegistry.cs" />
     <Compile Include="Exports\IAccessedCache.cs" />
     <Compile Include="Exports\SmokeCommand.cs" />
+    <Compile Include="GhPagesCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Running\ApplicationRootPackageLoader.cs" />
