got run picking the home page correctly for all possible permutations of host/doc project count

--- a/src/FubuDocsRunner/FubuDocsRunner.csproj
+++ b/src/FubuDocsRunner/FubuDocsRunner.csproj
@@ -139,19 +139,23 @@
     <Compile Include="Exports\IAccessedCache.cs" />
     <Compile Include="Exports\SmokeCommand.cs" />
     <Compile Include="GhPagesCommand.cs" />
+    <Compile Include="GhPagesInput.cs" />
+    <Compile Include="GitStep.cs" />
+    <Compile Include="IStep.cs" />
+    <Compile Include="PlaceholderStep.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Running\ApplicationRootPackageLoader.cs" />
     <Compile Include="Running\CurrentDirectoryLoader.cs" />
     <Compile Include="Running\DocumentPackageLoader.cs" />
     <Compile Include="Running\FubuDocsApplication.cs" />
-    <Compile Include="Running\HomeEndpoint.cs" />
     <Compile Include="Running\FubuDocsDirectories.cs" />
     <Compile Include="Running\MainDocumentLinkedPackageLoader.cs" />
     <Compile Include="Running\RunCommand.cs" />
     <Compile Include="Running\RunFubuDocsRegistry.cs" />
     <Compile Include="Running\RunInput.cs" />
     <Compile Include="SnippetsCommand.cs" />
+    <Compile Include="StepCollection.cs" />
     <Compile Include="Topics\AddTopicsCommand.cs" />
     <Compile Include="Topics\BatchAdderController.cs" />
     <Compile Include="Topics\AddTopicsInput.cs" />
