--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -139,6 +139,7 @@
     <Compile Include="PoweredByFubu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\TopNavigation.cs" />
+    <Compile Include="Skinning\HomeEndpoint.cs" />
     <Compile Include="Skinning\HostHomeEndpoint.cs" />
     <Compile Include="Skinning\OverrideChrome.cs" />
     <Compile Include="Skinning\SpecialView.cs" />
@@ -161,6 +162,7 @@
     <Compile Include="Topics\OrderedTopic.cs" />
     <Compile Include="Topics\ProjectRoot.cs" />
     <Compile Include="Topics\PublishedNuget.cs" />
+    <Compile Include="Topics\SetHomePage.cs" />
     <Compile Include="Topics\SparkTopicFile.cs" />
     <Compile Include="Topics\SplashChrome.cs" />
     <Compile Include="Topics\StringExtensions.cs" />
