--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -108,7 +108,7 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AllProjectsModel.cs" />
-    <Compile Include="AllTopicsEndpoint.cs" />
+    <Compile Include="HomeEndpoint.cs" />
     <Compile Include="CLI\ArgumentsTag.cs" />
     <Compile Include="CLI\CommandDocumentationSource.cs" />
     <Compile Include="CLI\CommandSectionTag.cs" />
@@ -139,7 +139,6 @@
     <Compile Include="PoweredByFubu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\TopNavigation.cs" />
-    <Compile Include="Skinning\HomeEndpoint.cs" />
     <Compile Include="Skinning\HostHomeEndpoint.cs" />
     <Compile Include="Skinning\OverrideChrome.cs" />
     <Compile Include="Skinning\SpecialView.cs" />
