--- a/src/Sample.Docs/Sample.Docs.csproj
+++ b/src/Sample.Docs/Sample.Docs.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -31,13 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -65,13 +65,13 @@
     <None Include="deep\1.b\index.spark" />
     <None Include="deep\2.a\index.spark" />
     <None Include="deep\3.d\index.spark" />
+    <None Include="index.spark" />
     <None Include="nested\a.spark" />
     <None Include="nested\b.spark" />
     <None Include="nested\c.spark" />
     <None Include="nested\index.spark">
       <SubType>Designer</SubType>
     </None>
-    <None Include="index.spark" />
     <None Include="subject1\index.spark" />
     <None Include="subject1\samples\whatever.spark" />
     <None Include="subject2\child1.spark" />
