made the export url logic smart enough to handle html dumps, rooted gh-pages, and nested gh-pages.  Closes GH-25, Closes GH-26

--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -108,6 +108,7 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AllProjectsModel.cs" />
+    <Compile Include="FubuDocsDirectories.cs" />
     <Compile Include="HomeEndpoint.cs" />
     <Compile Include="CLI\ArgumentsTag.cs" />
     <Compile Include="CLI\CommandDocumentationSource.cs" />
