--- a/ripple.config
+++ b/ripple.config
@@ -13,13 +13,31 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="fubu" Version="0.9.9.303" Mode="Float" />
+    <Dependency Name="Bottles" Version="2.0.0.549" Mode="Float" />
+    <Dependency Name="fubu" Version="0.9.9.317" Mode="Float" />
+    <Dependency Name="FubuCore" Version="1.2.0.260" Mode="Float" />
     <Dependency Name="FubuCsProjFile" Version="0.9.0.47" Mode="Float" />
     <Dependency Name="FubuMVC.Ajax" Version="0.1.0.400" Mode="Float" />
-    <Dependency Name="FubuMVC.CodeSnippets.Docs" Version="1.0.0.347" Mode="Float" />
-    <Dependency Name="FubuMVC.Spark" Version="1.0.0.434" Mode="Float" />
+    <Dependency Name="FubuMVC.CodeSnippets" Version="1.0.0.357" Mode="Float" />
+    <Dependency Name="FubuMVC.CodeSnippets.Docs" Version="1.0.0.357" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.2.0.1601" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.527" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.560" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.545" Mode="Float" />
+    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.6.318" Mode="Float" />
+    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.311" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1601" Mode="Float" />
+    <Dependency Name="FubuMVC.Media" Version="0.9.5.403" Mode="Float" />
+    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.178" Mode="Float" />
+    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1601" Mode="Float" />
+    <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.640" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="1.0.0.545" Mode="Float" />
+    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1601" Mode="Float" />
+    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.635" Mode="Float" />
     <Dependency Name="FubuMVC.Validation" Version="0.9.10.734" Mode="Float" />
+    <Dependency Name="FubuTestingSupport" Version="1.2.0.260" Mode="Float" />
     <Dependency Name="FubuValidation" Version="0.9.10.734" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.180" Mode="Float" />
     <Dependency Name="Microsoft.Bcl" Version="1.1.3" Mode="Fixed" />
     <Dependency Name="Microsoft.Bcl.Build" Version="1.0.9-beta" Mode="Fixed" />
     <Dependency Name="Microsoft.Net.Http" Version="2.0.20710.0" Mode="Fixed" />
