--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Todos\TodoTableTag.cs" />
     <Compile Include="Todos\TodoTask.cs" />
     <Compile Include="Tools\ProjectEndpoints.cs" />
+    <Compile Include="Tools\ToolsClasses.cs" />
     <Compile Include="Topics\DocumentationProjectLoader.cs" />
     <Compile Include="Topics\FubuDocsPackageLoader.cs" />
     <Compile Include="Topics\ITopicContext.cs" />
@@ -227,7 +228,9 @@
     <None Include="Snippets\snippets.spark" />
     <None Include="Snippets\snippet.spark" />
     <None Include="Todos\todos.spark" />
-    <None Include="Tools\Project.spark" />
+    <None Include="Tools\Project.spark">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Topics\Splash.spark">
       <SubType>Designer</SubType>
     </None>
