--- a/src/FubuDocs.Tests/FubuDocs.Tests.csproj
+++ b/src/FubuDocs.Tests/FubuDocs.Tests.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Running\RunInputTester.cs" />
     <Compile Include="Todos\TodoTaskTester.cs" />
     <Compile Include="Tools\TopicTokenLoadingTester.cs" />
+    <Compile Include="Tools\TopicTokenTester.cs" />
     <Compile Include="Topics\can_build_behavior_for_topic_chain.cs" />
     <Compile Include="Topics\can_load_plugin_projects_and_make_the_associations.cs" />
     <Compile Include="Topics\ObjectMother.cs" />
