--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -152,6 +152,10 @@
     <Compile Include="Todos\TodoModel.cs" />
     <Compile Include="Todos\TodoTableTag.cs" />
     <Compile Include="Todos\TodoTask.cs" />
+    <Compile Include="Tools\CreateFolder.cs" />
+    <Compile Include="Tools\DeleteFolder.cs" />
+    <Compile Include="Tools\DeleteTopic.cs" />
+    <Compile Include="Tools\MoveTopic.cs" />
     <Compile Include="Tools\ProjectEndpoints.cs" />
     <Compile Include="Tools\ToolsClasses.cs" />
     <Compile Include="Topics\DocumentationProjectLoader.cs" />
