RewriteUrl and RewriteTitle deltas

--- a/src/FubuDocs.Tests/FubuDocs.Tests.csproj
+++ b/src/FubuDocs.Tests/FubuDocs.Tests.csproj
@@ -128,6 +128,8 @@
     <Compile Include="Running\RunInputTester.cs" />
     <Compile Include="Todos\TodoTaskTester.cs" />
     <Compile Include="Tools\NewTopicTester.cs" />
+    <Compile Include="Tools\RewriteTitleTester.cs" />
+    <Compile Include="Tools\RewriteUrlTester.cs" />
     <Compile Include="Tools\TopicTokenLoadingTester.cs" />
     <Compile Include="Tools\TopicTokenTester.cs" />
     <Compile Include="Topics\can_build_behavior_for_topic_chain.cs" />
