--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -155,9 +155,12 @@
     <Compile Include="Tools\CreateFolder.cs" />
     <Compile Include="Tools\DeleteFolder.cs" />
     <Compile Include="Tools\DeleteTopic.cs" />
+    <Compile Include="Tools\IDelta.cs" />
     <Compile Include="Tools\MoveTopic.cs" />
     <Compile Include="Tools\NewTopic.cs" />
     <Compile Include="Tools\ProjectEndpoints.cs" />
+    <Compile Include="Tools\RewriteTitle.cs" />
+    <Compile Include="Tools\RewriteUrl.cs" />
     <Compile Include="Tools\ToolsClasses.cs" />
     <Compile Include="Topics\DocumentationProjectLoader.cs" />
     <Compile Include="Topics\FubuDocsPackageLoader.cs" />
