--- a/src/FubuDocs/fubudocs.asset.config
+++ b/src/FubuDocs/fubudocs.asset.config
@@ -12,3 +12,6 @@ fubudocs-tools.js requires jquery, toastr.js
 fubudocs.js requires jquery
 
 build-status.js requires jquery
+
+jquery.nestable.js requires jquery
+topics.js requires jquery, jquery.nestable.js
