--- a/src/FubuDocs/fubudocs.asset.config
+++ b/src/FubuDocs/fubudocs.asset.config
@@ -15,3 +15,4 @@ build-status.js requires jquery
 
 jquery.nestable.js requires jquery
 topics.js requires jquery, jquery.nestable.js
+topic-editor.js requires topics.js
