initial work for submitting a new topic structure.  Converting to parent structure, posting, calculating deltas

--- a/src/FubuDocsHarness/FubuDocsHarness.csproj
+++ b/src/FubuDocsHarness/FubuDocsHarness.csproj
@@ -144,8 +144,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51553</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://localhost/FubuDocsHarness</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
