--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -150,19 +150,24 @@
     <Compile Include="Snippets\SnippetsTableTag.cs" />
     <Compile Include="Todos\TodoTableTag.cs" />
     <Compile Include="Todos\TodoTask.cs" />
+    <Compile Include="Tools\AllTopicsTag.cs" />
     <Compile Include="Tools\CreateFolder.cs" />
     <Compile Include="Tools\DeleteFolder.cs" />
     <Compile Include="Tools\DeleteTopic.cs" />
     <Compile Include="Tools\DeltaCollector.cs" />
     <Compile Include="Tools\IDelta.cs" />
+    <Compile Include="Tools\ITopicTokenCache.cs" />
     <Compile Include="Tools\MoveTopic.cs" />
     <Compile Include="Tools\NewTopic.cs" />
     <Compile Include="Tools\ProjectEndpoints.cs" />
+    <Compile Include="Tools\ProjectRequest.cs" />
+    <Compile Include="Tools\ProjectViewModel.cs" />
     <Compile Include="Tools\RewriteTitle.cs" />
     <Compile Include="Tools\RewriteUrl.cs" />
     <Compile Include="Tools\TopicListItemTag.cs" />
     <Compile Include="Tools\TopicNodeTag.cs" />
     <Compile Include="Tools\TopicToken.cs" />
+    <Compile Include="Tools\TopicTokenCache.cs" />
     <Compile Include="Tools\TopicTreeTag.cs" />
     <Compile Include="Topics\DocumentationProjectLoader.cs" />
     <Compile Include="Topics\FubuDocsPackageLoader.cs" />
