checkpoint before beginning writes

--- a/src/FubuDocs.Tests/FubuDocs.Tests.csproj
+++ b/src/FubuDocs.Tests/FubuDocs.Tests.csproj
@@ -34,9 +34,7 @@
     <Reference Include="Bottles">
       <HintPath>..\packages\Bottles\lib\Bottles.dll</HintPath>
     </Reference>
-    <Reference Include="Fubu, Version=0.9.9.0, Culture=neutral, processorArchitecture=MSIL">
-      <ExecutableExtension>.exe</ExecutableExtension>
-    </Reference>
+    <Reference Include="Fubu, Version=0.9.9.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="FubuCore">
       <HintPath>..\packages\FubuCore\lib\FubuCore.dll</HintPath>
     </Reference>
