--- a/src/FubuDocs/ripple.dependencies.config
+++ b/src/FubuDocs/ripple.dependencies.config
@@ -1,5 +1,7 @@
 Bottles
+fubu
 FubuCore
+FubuCsProjFile
 FubuLocalization
 FubuMVC.Ajax
 FubuMVC.CodeSnippets
@@ -10,12 +12,17 @@ FubuMVC.Core.UI
 FubuMVC.Core.View
 FubuMVC.Diagnostics
 FubuMVC.JQueryUI
+FubuMVC.Katana
 FubuMVC.Media
 FubuMVC.Navigation
+FubuMVC.OwinHost
 FubuMVC.SlickGrid
 FubuMVC.Spark
 FubuMVC.TwitterBootstrap
 FubuMVC.Validation
 FubuValidation
 HtmlTags
+Newtonsoft.Json
+Owin
+Selenium.WebDriver
 Spark
