--- a/src/FubuDocs.Tests/ripple.dependencies.config
+++ b/src/FubuDocs.Tests/ripple.dependencies.config
@@ -1,5 +1,7 @@
 Bottles
+fubu
 FubuCore
+FubuCsProjFile
 FubuLocalization
 FubuMVC.CodeSnippets
 FubuMVC.Core
@@ -8,16 +10,21 @@ FubuMVC.Core.UI
 FubuMVC.Core.View
 FubuMVC.Diagnostics
 FubuMVC.JQueryUI
+FubuMVC.Katana
 FubuMVC.Media
 FubuMVC.Navigation
+FubuMVC.OwinHost
 FubuMVC.SlickGrid
 FubuMVC.Spark
 FubuMVC.StructureMap
 FubuMVC.TwitterBootstrap
 FubuTestingSupport
 HtmlTags
+Newtonsoft.Json
 NUnit
+Owin
 RhinoMocks
+Selenium.WebDriver
 Spark
 structuremap
 structuremap.automocking
