--- a/src/FubuDocs/fubudocs.asset.config
+++ b/src/FubuDocs/fubudocs.asset.config
@@ -7,7 +7,9 @@ prettify.css is sons-of-obsidian.css
 toastr.js requires jquery
 request-diagnostics.js requires jquery, toastr.js
 
-topics.js requires jquery, twitter/bootstrap-affix.js
+diagnostics/bootstrap-scrollspy.js requires twitterbootstrap
+topics.js requires jquery, diagnostics/bootstrap-scrollspy.js, twitter/bootstrap-affix.js
+diagnostics/bootstrap-scrollspy.js requires jquery
 fubudocs-tools.js requires jquery, toastr.js
 fubudocs.js requires jquery
 
