--- a/ripple.config
+++ b/ripple.config
@@ -13,29 +13,30 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="Bottles" Version="2.0.0.553" Mode="Float" />
-    <Dependency Name="fubu" Version="0.9.9.317" Mode="Float" />
-    <Dependency Name="FubuCore" Version="1.2.0.260" Mode="Float" />
-    <Dependency Name="FubuCsProjFile" Version="0.9.0.47" Mode="Float" />
-    <Dependency Name="FubuMVC.Ajax" Version="0.1.0.400" Mode="Float" />
-    <Dependency Name="FubuMVC.CodeSnippets" Version="1.0.0.357" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="1.2.0.1605" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.527" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.560" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.545" Mode="Float" />
-    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.6.318" Mode="Float" />
-    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.311" Mode="Float" />
-    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1601" Mode="Float" />
-    <Dependency Name="FubuMVC.Media" Version="0.9.5.403" Mode="Float" />
-    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.178" Mode="Float" />
-    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1601" Mode="Float" />
-    <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.640" Mode="Float" />
-    <Dependency Name="FubuMVC.Spark" Version="1.0.0.545" Mode="Float" />
-    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1601" Mode="Float" />
-    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.635" Mode="Float" />
-    <Dependency Name="FubuMVC.Validation" Version="0.9.10.734" Mode="Float" />
-    <Dependency Name="FubuTestingSupport" Version="1.2.0.260" Mode="Float" />
-    <Dependency Name="FubuValidation" Version="0.9.10.734" Mode="Float" />
+    <Dependency Name="Bottles" Version="2.0.0.568" Mode="Float" />
+    <Dependency Name="fubu" Version="0.9.9.351" Mode="Float" />
+    <Dependency Name="FubuCore" Version="1.2.0.267" Mode="Float" />
+    <Dependency Name="FubuCsProjFile" Version="1.1.0.79" Mode="Float" />
+    <Dependency Name="FubuLocalization" Version="1.0.0.172" Mode="Float" />
+    <Dependency Name="FubuMVC.Ajax" Version="0.1.0.449" Mode="Float" />
+    <Dependency Name="FubuMVC.CodeSnippets" Version="1.0.0.381" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.2.0.1661" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.551" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.596" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.571" Mode="Float" />
+    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.7.347" Mode="Float" />
+    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.334" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1661" Mode="Float" />
+    <Dependency Name="FubuMVC.Media" Version="0.9.5.425" Mode="Float" />
+    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.200" Mode="Float" />
+    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1661" Mode="Float" />
+    <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.641" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="1.0.0.571" Mode="Float" />
+    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1661" Mode="Float" />
+    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.636" Mode="Float" />
+    <Dependency Name="FubuMVC.Validation" Version="0.9.11.859" Mode="Float" />
+    <Dependency Name="FubuTestingSupport" Version="1.2.0.266" Mode="Float" />
+    <Dependency Name="FubuValidation" Version="0.9.11.859" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.180" Mode="Float" />
     <Dependency Name="Microsoft.Bcl" Version="1.1.3" Mode="Fixed" />
     <Dependency Name="Microsoft.Bcl.Build" Version="1.0.9-beta" Mode="Fixed" />
@@ -43,6 +44,7 @@
     <Dependency Name="Microsoft.Owin" Version="1.1.0-beta2" Mode="Fixed" />
     <Dependency Name="Microsoft.Owin.Host.HttpListener" Version="0.18-alpha" Mode="Fixed" />
     <Dependency Name="Microsoft.Owin.Hosting" Version="0.18-alpha" Mode="Fixed" />
+    <Dependency Name="Newtonsoft.Json" Version="5.0.8.0" Mode="Float" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
     <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" />
