cleaning up bottles detritus

--- a/src/Imported.Docs/Imported.Docs.csproj
+++ b/src/Imported.Docs/Imported.Docs.csproj
@@ -53,12 +53,7 @@
   <ItemGroup>
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="pak-Data.zip" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="pak-Config.zip" />
-  </ItemGroup>
+  <ItemGroup></ItemGroup>
   <ItemGroup>
     <None Include="imported1.spark" />
     <None Include="Imported2.spark" />
