--- a/ripple.config
+++ b/ripple.config
@@ -13,31 +13,31 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="Bottles" Version="2.0.0.568" Mode="Float" />
-    <Dependency Name="fubu" Version="0.9.9.351" Mode="Float" />
-    <Dependency Name="FubuCore" Version="1.2.0.267" Mode="Float" />
-    <Dependency Name="FubuCsProjFile" Version="1.1.0.79" Mode="Float" />
-    <Dependency Name="FubuLocalization" Version="1.0.0.172" Mode="Float" />
-    <Dependency Name="FubuMVC.Ajax" Version="0.1.0.449" Mode="Float" />
-    <Dependency Name="FubuMVC.CodeSnippets" Version="1.0.0.381" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="1.2.0.1661" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.551" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.596" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.571" Mode="Float" />
-    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.7.347" Mode="Float" />
-    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.334" Mode="Float" />
-    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1661" Mode="Float" />
-    <Dependency Name="FubuMVC.Media" Version="0.9.5.425" Mode="Float" />
-    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.200" Mode="Float" />
-    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1661" Mode="Float" />
-    <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.641" Mode="Float" />
-    <Dependency Name="FubuMVC.Spark" Version="1.0.0.571" Mode="Float" />
-    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1661" Mode="Float" />
-    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.636" Mode="Float" />
-    <Dependency Name="FubuMVC.Validation" Version="0.9.11.859" Mode="Float" />
-    <Dependency Name="FubuTestingSupport" Version="1.2.0.266" Mode="Float" />
-    <Dependency Name="FubuValidation" Version="0.9.11.859" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.180" Mode="Float" />
+    <Dependency Name="Bottles" Version="2.0.0.576" Mode="Float" />
+    <Dependency Name="fubu" Version="0.9.9.369" Mode="Float" />
+    <Dependency Name="FubuCore" Version="1.2.0.272" Mode="Float" />
+    <Dependency Name="FubuCsProjFile" Version="1.1.0.83" Mode="Float" />
+    <Dependency Name="FubuLocalization" Version="1.0.0.174" Mode="Float" />
+    <Dependency Name="FubuMVC.Ajax" Version="0.1.0.468" Mode="Float" />
+    <Dependency Name="FubuMVC.CodeSnippets" Version="1.0.0.390" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.2.0.1678" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.560" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.611" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.View" Version="1.1.0.581" Mode="Float" />
+    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.8.358" Mode="Float" />
+    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.342" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1678" Mode="Float" />
+    <Dependency Name="FubuMVC.Media" Version="0.9.5.433" Mode="Float" />
+    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.208" Mode="Float" />
+    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1678" Mode="Float" />
+    <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.649" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="1.1.0.581" Mode="Float" />
+    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1678" Mode="Float" />
+    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.644" Mode="Float" />
+    <Dependency Name="FubuMVC.Validation" Version="0.9.11.872" Mode="Float" />
+    <Dependency Name="FubuTestingSupport" Version="1.2.0.272" Mode="Float" />
+    <Dependency Name="FubuValidation" Version="0.9.11.872" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
     <Dependency Name="Microsoft.Bcl" Version="1.1.3" Mode="Fixed" />
     <Dependency Name="Microsoft.Bcl.Build" Version="1.0.9-beta" Mode="Fixed" />
     <Dependency Name="Microsoft.Net.Http" Version="2.0.20710.0" Mode="Fixed" />
@@ -48,6 +48,7 @@
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
     <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" />
+    <Dependency Name="Owin.Types" Version="0.8.5.0" Mode="Float" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriver" Version="2.35.0" Mode="Fixed" />
     <Dependency Name="Spark" Version="1.7.5.0" Mode="Fixed" />
