--- a/src/FubuDocs.Docs/FubuDocs.Docs.csproj
+++ b/src/FubuDocs.Docs/FubuDocs.Docs.csproj
@@ -72,10 +72,5 @@
   <ItemGroup>
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="pak-Data.zip" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="pak-Config.zip" />
-  </ItemGroup>
+  <ItemGroup></ItemGroup>
 </Project>
