--- a/src/FubuMVC.Plugin.Docs/FubuMVC.Plugin.Docs.csproj
+++ b/src/FubuMVC.Plugin.Docs/FubuMVC.Plugin.Docs.csproj
@@ -53,12 +53,7 @@
   <ItemGroup>
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="pak-Data.zip" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="pak-Config.zip" />
-  </ItemGroup>
+  <ItemGroup></ItemGroup>
   <ItemGroup>
     <None Include="links.spark">
       <SubType>Designer</SubType>
