--- a/src/Sample.Docs/Sample.Docs.csproj
+++ b/src/Sample.Docs/Sample.Docs.csproj
@@ -97,10 +97,5 @@
   <ItemGroup>
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="pak-Data.zip" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="pak-Config.zip" />
-  </ItemGroup>
+  <ItemGroup></ItemGroup>
 </Project>
