Add kde's dir browser file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ src/FubuDocs.Docs/snippets
 src/Host/fubu-content
 fubudocs-export
 src/FubuDocsHarness/refresh.config
+
+# Kde directory browser config file
+.directory
