--- a/src/FubuDocs/FubuDocs.csproj
+++ b/src/FubuDocs/FubuDocs.csproj
@@ -150,11 +150,13 @@
     <Compile Include="FubuDocsDirectories.cs" />
     <Compile Include="FubuDocsExtension.cs" />
     <Compile Include="FubuWorldRegistry.cs" />
+    <Compile Include="GemTag.cs" />
     <Compile Include="HomeEndpoint.cs" />
     <Compile Include="Infrastructure\Binders\RequestLogPropertyBinder.cs" />
     <Compile Include="Infrastructure\BottlesFilter.cs" />
     <Compile Include="Infrastructure\EditorLauncher.cs" />
     <Compile Include="Infrastructure\FubuDocsPackageLoader.cs" />
+    <Compile Include="InstallationPageExtensions.cs" />
     <Compile Include="Navigation\FubuDocsPageExtensions.cs" />
     <Compile Include="Navigation\NamedTopicLinkTag.cs" />
     <Compile Include="Navigation\SectionTag.cs" />
@@ -164,6 +166,7 @@
     <Compile Include="Navigation\TopicTreeBuilder.cs" />
     <Compile Include="Navigation\TopLeftTopicNavigationTag.cs" />
     <Compile Include="Navigation\TopRightTopicNavigationTag.cs" />
+    <Compile Include="NugetTag.cs" />
     <Compile Include="PoweredByFubu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\TopNavigation.cs" />
